styles/hoverCard.module.css
.container {
    z-index: 100;
    position: relative;
}

.overlay {
    white-space: nowrap;
    width: fit-content;
    position: absolute;
    margin-top: 150%;
    background: rgba(0, 0, 0, 0.95);
    color: white;
    padding: 20px;
    text-align: center;
    border-radius: 10px;
    border: 1px solid #0070f3;
}
.overlay:before {
    position: absolute;
    content: "";
    top: -26px;
    left: 13px;
    /* left: calc(50% - 13px); */
    border-right: 13px solid transparent;
    border-left: 13px solid transparent;
    border-bottom: 26px solid rgba(0, 0, 0, 0.95);
}

.img {
    width: 50px;
    height: 50px;
}

